k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goi-api
  namespace: goi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goi-api
  template:
    metadata:
      labels:
        app: goi-api
    spec:
      containers:
        - name: goi-api
          image: goi-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: goi-api
  namespace: goi
spec:
  selector:
    app: goi-api
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
