k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goi-postgres
  namespace: goi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goi-postgres
  template:
    metadata:
      labels:
        app: goi-postgres
    spec:
      containers:
        - name: postgres
          # Use official Postgres image
          image: postgres:14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data/pgdata
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: goi-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: goi-postgres
  namespace: goi
spec:
  selector:
    app: goi-postgres
  ports:
    - port: 5432
      targetPort: 5432
