k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goi-ui
  namespace: goi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goi-ui
  template:
    metadata:
      labels:
        app: goi-ui
    spec:
      containers:
        - name: goi-ui
          image: goi-web:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: goi-ui
  namespace: goi
spec:
  selector:
    app: goi-ui
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
